--- a/main_index.html
+++ b/main_index.html
@@ -206,7 +206,7 @@
       <p class="text-center">株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>生徒が制作したものであり、SCRAPが主催/公認するものではありません。</p>
     </div>
   </footer>
-  <script src="https://unpkg.com/vue@next"></script>
+  <script src="https://unpkg.com/vue"></script>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
